<resources>
    <string name="app_name">TMDB Client</string>
    <string name="movieImage">Movie image</string>
    <string name="releaseDate">Release date</string>
    <string name="popularity">Popularity</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="searchMovies">Search movies</string>
    <string name="searchPersons">Search persons</string>
    <string name="search_title">Search</string>
    <string name="name">Name</string>
    <string name="personImage">Image of the person</string>
    <string name="MOVIE_KEY">movie</string>
    <string name="releaseDateDots">Release date:&#160;</string>
    <string name="overview">Overview</string>
    <string name="mainCrew">Main crew</string>
    <string name="directingDots">Directing:&#160;</string>
    <string name="writingDots">Writing:&#160;</string>
    <string name="casting">Cast</string>
    <string name="character">Character</string>
    <string name="PERSON_KEY">person</string>
    <string name="popularityDots">Popularity:&#160;</string>
    <string name="birthdayDots">Birthday:&#160;</string>
    <string name="deathdayDots">Death day:&#160;</string>
    <string name="placeOfBirthDots">Place of birth:&#160;</string>
    <string name="knownFor">Known for</string>
    <string name="movieIsNotSaved">This movie data is not saved in the database</string>
    <string name="saveIsNotSaved">This person data is not saved in the database</string>
    <string name="deleteMovie">Delete movie</string>
    <string name="txtDeleteMovieQuestion">Are you sure you want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="movieDeleted">Movie deleted successfully</string>
    <string name="txDeletePersonQuestion">Are you sure you want to delete this person?</string>
    <string name="deletePerson">Delete person</string>
    <string name="personDeleted">Person deleted successfully</string>
    <string name="noMovies">There are no movies stored in the database</string>
    <string name="noPersons">There are no persons stored in the database</string>
    <string name="noPersonsWithName">There are no persons stored with the name you provided</string>
    <string name="noMoviesWithTitle">There are no movies stored with the title you provided</string>
    <string name="refresh">Refresh</string>
    <string name="mostPopularPersons">Most popular persons</string>
    <string name="searchResult">Search result</string>
    <string name="mostPopularMovies">Most popular movies</string>
    <string name="edit">Edit</string>
    <string name="voidOverviewError">Please, write an overview in order to submit it</string>
    <string name="movieOverviewUpdated">Movie overview updated</string>
    <string name="editOverview">Edit overview</string>
    <string name="voidBiographyError">Please, write a biography in order to submit it</string>
    <string name="editBiography">Edit biography</string>
    <string name="personBiographyUdpdated">Person biography updated</string>
    <string name="searchMovieHint">Search a movie by name</string>
    <string name="searchPersonHint">Search a person by name</string>
    <string name="most_popular_movie_image_description">Most popular movie description</string>
    <string name="mostPopularMovie">Most popular movie</string>
    <string name="movies">Movies</string>
    <string name="persons">Persons</string>
    <string name="welcome">Welcome</string>
    <string name="appInfo"><![CDATA[With this application you can access to all the movies and persons stored in the internal database. These are the things you can do:<br/>&#8226; View the most popular movies<br/>&#8226; Search movies by name<br/>&#8226; Edit movies overview<br/>&#8226; View the most popular persons<br/>&#8226; Search persons by name<br/>&#8226; Edit persons biography<br/>]]></string>
</resources>
