<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.miw.tmdb.client.activities.MainActivity">

    <TextView
        android:id="@+id/queryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostPopularPersons"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/name"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/popularity"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/noPersons"
        android:textColor="@color/colorPrimary" />

    <ListView
        android:id="@+id/personList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
